devops/k3s/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  labels: 
    app: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
        - name: http-server
          image: shogungoose/webtest-capybara:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-svc
spec:
  selector:
    app: http-server
  ports:
    - port: 80
      targetPort: web
