devops/k3s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - host: rpi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server-svc
                port:
                  number: 80
